--- a/CameraDetectorDemo/src/main/res/values/colors.xml
+++ b/CameraDetectorDemo/src/main/res/values/colors.xml
@@ -1,19 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <color name="white">#FFFFFF</color>
-    <color name="yellow">#FFFF00</color>
-    <color name="fuchsia">#FF00FF</color>
-    <color name="red">#FF0000</color>
-    <color name="silver">#C0C0C0</color>
-    <color name="gray">#808080</color>
-    <color name="olive">#808000</color>
-    <color name="purple">#800080</color>
-    <color name="maroon">#800000</color>
-    <color name="aqua">#00FFFF</color>
-    <color name="lime">#00FF00</color>
-    <color name="teal">#008080</color>
-    <color name="green">#008000</color>
-    <color name="blue">#0000FF</color>
-    <color name="navy">#000080</color>
-    <color name="black">#000000</color>
+    <color name="Anger">#E72F55</color>
+    <color name="Fear">#35A251</color>
+    <color name="Disgust">#9E77BA</color>
+    <color name="Sadness">#729BC7</color>
+    <color name="Joy">#FADB4D</color>
+    <color name="Neutral">#FDFDFD</color>
 </resources>
