--- a/CameraDetectorDemo/src/main/res/layout/activity_main.xml
+++ b/CameraDetectorDemo/src/main/res/layout/activity_main.xml
@@ -6,46 +6,59 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/voice_start_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true" />
+    <View
+        android:layout_width="200dp"
+        android:layout_height="220dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="76dp"
+        android:background="@drawable/rounded_border_record"
+        android:id="@+id/view" />
 
-    <ToggleButton
-        android:id="@+id/front_back_toggle_button"
+    <ImageButton
+        android:id="@+id/front_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/voice_start_button"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignBottom="@+id/view"
+        android:layout_alignStart="@+id/voice_start_imageButton"
+        android:layout_marginBottom="262dp"
+        android:layout_marginStart="17dp"
+        android:background="@null"
         android:padding="5dp"
+        android:src="@drawable/switch_camera_icon"
         android:textOff="FRONT"
         android:textOn="BACK" />
 
-    <TextView
-        android:id="@+id/emotions_textview"
+    <ImageButton
+        android:id="@+id/voice_start_imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="emojis"
-        android:textAlignment="viewStart" />
-
-    <TextView
-        android:id="@+id/txtSpeechInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/front_back_toggle_button"
-        android:layout_alignParentStart="true"
+        android:layout_above="@+id/txt_speech_input"
         android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="87dp"
-        android:textAlignment="viewStart"
+        android:src="@drawable/voice_recorder_icon"
+        android:background="@null"/>
+
+    <ImageButton
+        android:id="@+id/text_to_speech_imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/txt_speech_input"
+        android:layout_marginEnd="14dp"
+        android:layout_toStartOf="@+id/voice_start_imageButton"
+        android:background="@null"
+        android:src="@drawable/speech_to_voice_icon" />
+
+    <EditText
+        android:id="@+id/txt_speech_input"
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
         android:textColor="@android:color/black"
-        android:textSize="24sp" />
-
-
+        android:textSize="20sp"
+        android:ems="10"
+        android:padding="10dp"
+        android:background="@drawable/rounded_border_edittext"
+        android:hint="Voulez vous vous exprimer ?"
+        android:textColorHint="@android:color/black"
+        android:selectAllOnFocus="true"/>
 </RelativeLayout>
