--- a/CameraDetectorDemo/src/main/res/values/colors.xml
+++ b/CameraDetectorDemo/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="Disgust">#9E77BA</color>
     <color name="Sadness">#729BC7</color>
     <color name="Joy">#FADB4D</color>
-    <color name="Neutral">#FDFDFD</color>
+    <color name="Neutral">#000</color>
 </resources>
