--- a/CameraDetectorDemo/src/main/res/drawable/rounded_border_record.xml
+++ b/CameraDetectorDemo/src/main/res/drawable/rounded_border_record.xml
@@ -3,7 +3,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@null" />
             <corners android:radius="10dp" />
-            <stroke android:width="4dp" android:color="#ff0000" />
+            <stroke android:width="4dp" android:color="#fff" />
         </shape>
     </item>
 </selector>
