--- a/CameraDetectorDemo/src/main/res/layout/activity_main.xml
+++ b/CameraDetectorDemo/src/main/res/layout/activity_main.xml
@@ -18,9 +18,8 @@
         android:id="@+id/front_back_imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="15dp"
-        android:layout_toEndOf="@+id/txt_speech_input"
         android:background="@null"
         android:padding="5dp"
         android:src="@drawable/switch_camera_icon"
@@ -73,8 +72,19 @@
 
     <ImageView
         android:id="@+id/emoticon_imageView"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_above="@+id/txt_speech_input"
-        android:layout_alignStart="@+id/view"/>
+        android:layout_alignStart="@+id/view"
+        android:layout_marginStart="41dp" />
+
+    <TextView
+        android:id="@+id/recording_message_textView"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/view"
+        android:layout_below="@+id/view"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 </RelativeLayout>
